finished two frame and add image

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /assignment/Server/nbproject/private/
 /assignment/JavaFXApplication2/dist/
 /assignment/JavaFXApplication2/build/
+/try_twoframe/JavaFXApplication4/nbproject/private/
+/try_twoframe/JavaFXApplication4/build/
+/try_twoframe/JavaFXApplication4/dist/
