--- a/assignment/JavaFXApplication2/nbproject/project.properties
+++ b/assignment/JavaFXApplication2/nbproject/project.properties
@@ -29,14 +29,14 @@ dist.jar=${dist.dir}/JavaFXApplication2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-20160212.jar=D:\\MEGA\\COURSES\\COEN691P\\json-20160212.jar
+file.reference.protobuf-java-2.5.0.jar=D:\\MEGA\\COURSES\\COEN691P\\protobuf-java-2.5.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.json-20160212.jar}
+    ${file.reference.protobuf-java-2.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
